--- a/N-01 bimlSnap (SQL).ipynb
+++ b/N-01 bimlSnap (SQL).ipynb
@@ -334,7 +334,7 @@
                 "# Next Steps\n",
                 "\n",
                 "-   Visit [www.bitracks.com](http://www.bitracks.com/) and **download** BimlSnap and/or EltSnap\n",
-                "-   Visit this Presentation on **GitHub**\n",
+                "-   Visit this Presentation on GitHub [Jim-BITracks/Webinar-01](https://github.com/Jim-BITracks/Webinar-01.git)\n",
                 "-   Contact us [info@bitracks.com](mailto:&#x69;&#110;&#102;&#x6f;&#x40;&#98;&#105;&#x74;&#114;&#97;&#99;&#x6b;&#115;&#46;&#99;&#x6f;&#109;) and let us know how we can help you get started\n",
                 "-   Contact **Conor** at [cmuntin@bitracks.com](mailto:&#x63;&#x6d;&#117;&#110;&#116;&#105;&#x6e;&#64;&#x62;&#105;&#x74;&#114;&#97;&#99;&#x6b;&#x73;&#x2e;&#99;&#111;&#109;) and ask for a free copy of our book: [Hands-on Azure Data Studio](https://leanpub.com/hands-on-ads)"
             ],
